--- a/coding_projects.html
+++ b/coding_projects.html
@@ -33,8 +33,8 @@
         </div>
         <div class="projectss">
             <div class="projectss-images">
-                <img src="hotelmain.png" alt="Project Preview 1">
-                <img src="morehotelmain.png" alt="Project Preview 2">
+                <img src="hotelmain.PNG" alt="Project Preview 1">
+                <img src="morehotelmain.PNG" alt="Project Preview 2">
             </div>
             <div class="project-description">
                 <p>This project replicates a hotel booking site. Login and registration are implemented via PHP. <br>Upon logging in, users are directed to the main page where they can explore different room styles, accommodations offered, and pricing details. <br>When ready to book, users proceed to the booking page to select an available date, room amount, style, and the number of guests. <br>After booking, the details are accessible on their profile page. <br>Current limitations include authentication for payments and emails, as well as syncing between instagram social media occasonally going down. <br>This project is still under completion as it is more of a passive project, but the homepage is linked to showcase the general interface design 😊
