--- a/3d_work.html
+++ b/3d_work.html
@@ -72,8 +72,8 @@
                 </div>
             </div>
             <div class="project-images">
-                <img src="project 3-4.png" alt="Project Image 2-1">
-                <img src="project 3-3.png" alt="Project Image 2-2">
+                <img src="project 3-4.PNG" alt="Project Image 2-1">
+                <img src="project 3-3.PNG" alt="Project Image 2-2">
                 <img src="project 3-1.png" alt="Project Image 2-3">
                 <img src="project 3-2.png" alt="Project Image 2-4">
             </div>
