--- a/3d_work.html
+++ b/3d_work.html
@@ -112,8 +112,8 @@
                 </div>
             </div>
             <div class="project5-images">
-                <img src="project 5-1.png" alt="Project Image 2-1">
-                <img src="project 5-2.png" alt="Project Image 2-2">
+                <img src="project 5-1.PNG" alt="Project Image 2-1">
+                <img src="project 5-2.PNG" alt="Project Image 2-2">
                 <img src="project 5-4.jpg" alt="Project Image 2-3">
                
             </div>
