--- a/3d_work.html
+++ b/3d_work.html
@@ -63,7 +63,7 @@
         <div class="project">
             <div class="project-content">
                 <div class="project-text">
-                    <h3>Cosy Room</h3>
+                    <h3>Cozy Room</h3>
                     <p>This project is based on a YouTube tutorial, but I added a modern twist to make it uniquely mine. <br>It took about four days to complete, as it was one of my very first projects. <br>The final renders are shown below as the last two images.
                     </p>
                 </div>
