--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <div class="about-text">
             <h2>About Me</h2>
             <p>Hello! I'm currently entering my third year in a Bachelor of Engineering & Applied Science (Honors) in Software Engineering. My fascination with technology began early, driven by a desire to understand the inner workings of websites, devices, and everyday apps, which naturally led me to software engineering.<br><br>
-            I'am developing a through understanding of software through coursework, self-study, and personal projects. My academic and personal pursuits include exploring different abilities of coding, and learning a range of programming languages like Python, C++, and Java. Additionally, I have delved into 3D modeling using tools such as SolidWorks and Blender, broadening my skills into areas like architecture and scenery, where I am particularly eager to deepen my expertise.<br><br>
+            I'am developing a thorough understanding of software through coursework, self-study, and personal projects. My academic and personal pursuits include exploring different abilities of coding, and learning a range of programming languages like Python, C++, and Java. Additionally, I have delved into 3D modeling using tools such as SolidWorks and Blender, broadening my skills into areas like architecture and scenery, where I am particularly eager to deepen my expertise.<br><br>
             I am always on the lookout for the latest in technology and industry trends. Feel free to connect with me—I am keen to engage with like-minded individuals and discuss tech and career opportunities in technology!
             </p>
         </div>
