--- a/coding_projects.html
+++ b/coding_projects.html
@@ -37,19 +37,21 @@
                 <img src="morehotelmain.PNG" alt="Project Preview 2">
             </div>
             <div class="project-description">
-                <p>This project replicates a hotel booking site. Login and registration are implemented via PHP. <br>Upon logging in, users are directed to the main page where they can explore different room styles, accommodations offered, and pricing details. <br>When ready to book, users proceed to the booking page to select an available date, room amount, style, and the number of guests. <br>After booking, the details are accessible on their profile page. <br>Current limitations include authentication for payments and emails, syncing between instagram social media occasonally going down, as well as a scalability issue when opened on phones and tablets. <br>This project is still under completion as it is more of a passive project, but the homepage is linked to showcase the general interface design 😊
+                <p>This project replicates a hotel booking site. Login and registration are implemented via PHP. <br>Upon logging in, users are directed to the main page where they can explore different room styles, accommodations offered, and pricing details. <br>When ready to book, users proceed to the booking page to select an available date, room amount, style, and the number of guests. <br>After booking, the details are accessible on their profile page. <br>Current limitations include authentication for payments and emails, as well as syncing between instagram social media occasonally going down. <br>This project is still under completion as it is more of a passive project, but the homepage is linked to showcase the general interface design 😊
 </p>
                 <a href="Website2.0/mainpage.html" class="project-link">Check it out &rarr;</a>
             </div>
         </div>
         <div class="projectss">
             <div class="projectss3-images">
-                <img src="comming soon.png" alt="Project Preview 2">
+                
+             
+                <img src="example.png"alt="Project Preview 2">
             </div>
             <div class="project-description">
-                <p>This project marks my first venture into using a C++ GUI. Originally, I planned to create a simple game, but I opted for a more practical approach with a simple to-do list/note-taking app that I can use daily. <br>This project is currently in production, but given its straightforward design, I anticipate completing it relatively soon 😊
+                <p>This project marks my first venture into using a C++ GUI. Originally, I planned to create a simple game, but I opted for a more practical approach with a simple note-taking app that I can use daily. <br>This project project had a few ups and downs from the GUI not opening to multiple system crashes however after some back and forth for quite a while, I was able to get it up and running. <br> The system allows for user to create notes that are stored as txt files, <br> notes are updated(so long as you click save) directly. You can also open any previous txt files and edit them in the app and save them.<br> Over all this is a simple application and still in the works, however I enjoyed working with C++ GUI and think this is a good step in my development career 
                 </p>
-                <a href="comming soon.html" class="project-link">Comming soon &rarr;</a>
+                <a href="noteapp.html" class="project-link">Check it out &rarr;</a>
             </div>
         </div>
         <div class="projectss">
