--- a/coding_projects.html
+++ b/coding_projects.html
@@ -52,6 +52,7 @@
                 <p>This project marks my first venture into using a C++ GUI. Originally, I planned to create a simple game, but I opted for a more practical approach with a simple note-taking app that I can use daily. <br>This project project had a few ups and downs from the GUI not opening to multiple system crashes however after some back and forth for quite a while, I was able to get it up and running. <br> The system allows for user to create notes that are stored as txt files, <br> notes are updated(so long as you click save) directly. You can also open any previous txt files and edit them in the app and save them.<br> Over all this is a simple application and still in the works, however I enjoyed working with C++ GUI and think this is a good step in my development career 
                 </p>
                 <a href="noteapp.html" class="project-link">Check it out &rarr;</a>
+                <a href="https://github.com/yordanoskeflinkiel/NoteTaking" class="project-link">GitHub Repository &rarr;</a>
             </div>
         </div>
         <div class="projectss">
