--- a/about.html
+++ b/about.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <nav>
-        <div class="nav-left"><a href="about.html">About Me</a></div>
+        <div class="nav-left">
+            <a href="about.html">About Me</a>
+            <a href="https://yordanoskeflinkiel.github.io/Yordanos_Keflinkiel-Resume2024.pdf" target="_blank">Download Resume</a></li>   
+        </div>
         <div class="nav-right">
             <a href="coding_projects.html">Coding Projects</a>
             <a href="3d_work.html">3D Work</a>
