--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
         </div>
     </div>
 </body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F8KDDXQLW5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F8KDDXQLW5');
+</script>
 </html>
 
