--- a/notepics.html
+++ b/notepics.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="about.html">Main page</a>
             <a href="noteapp.html">Back to Overview</a>
         </nav>
     </header>
