--- a/attributions.html
+++ b/attributions.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F8KDDXQLW5"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-F8KDDXQLW5');
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Attributions</title>
@@ -72,6 +64,7 @@ footer {
                 <h4>Coding projects page</h4>
                 <li><a href="https://www.flaticon.com/free-icons/work-in-progress" title="work in progress icons">Work in progress icons created by Freepik - Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/free-icons/brown-hair" title="brown hair icons">Brown hair icons created by Creartive - Flaticon</a></li>
+                <li><a href="https://www.flaticon.com/free-icon/cube_645928" title="Cube free icon">Cube free icon created by becris - Flaticon</a></li>
                 <h4>3D projects page</h4>
                 <li><a href="https://www.flaticon.com/free-icons/architecture-and-city" title="architecture and city icons">Architecture and city icons created by madness - Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/free-icons/kitchen" title="kitchen icons">Kitchen icons created by Freepik - Flaticon</a></li>
@@ -86,3 +79,4 @@ footer {
     </footer>
 </body>
 </html>
+
