--- a/about.html
+++ b/about.html
@@ -41,6 +41,27 @@
             </p>
         </div>
     </section>
+    <section class="extra-curricular">
+        <div class="extra-curricular-container">
+            <h2>Extra Curricular</h2>
+            <ul class="extra-curricular-list">
+                <li>
+                    <img src="robotics.jpeg" alt="Robotics Team Logo" class="extra-curricular-logo">
+                    Robotics Team Member - Software department
+                </li>
+                <li>
+                    <img src="rocket.jpeg" alt="Rocketry Team Logo" class="extra-curricular-logo">
+                    Rocketry Team Member - Propulsion department 
+                </li>
+                <li>
+                    <img src="equitylogo.jpg" alt="Ambassador Program Logo" class="extra-curricular-logo">
+                    University Ambassador Assistant - Assisting in managing campus ambassadors and volunteer activities
+                </li>
+            </ul>
+        </div>
+    </section>
+    
+    
     <section class="education">
         <div class="education-container">
             <img src="school-picture.png" alt="Profile Picture" class="education-pic">
