--- a/3DSneakPeek.html
+++ b/3DSneakPeek.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F8KDDXQLW5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-F8KDDXQLW5');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sneak Peek | Project Development</title>
@@ -20,10 +11,10 @@
     <nav>
         <div class="nav-left">
             <a href="about.html">About Me</a>
-            <a href="https://yordanoskeflinkiel.github.io/YordanosTKeflinkiel_Resume.pdf" target="_blank">Download Resume</a>   
+            <a href="https://yordanoskeflinkiel.github.io/YordanosKeflinkiel_Resume2024.pdf" target="_blank">Download Resume</a>   
         </div>
         <div class="nav-right">
-            <a href="coding_projects.html">Coding Projects</a>
+            <a href="coding_projects.html">Projects</a>
             <a href="3d_work.html">3D Work</a>
         </div>
     </nav>
