--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         </div>
         <div class="about-text">
             <h2>About Me</h2>
-            <p>Hello! I'm currently in my second year, preparing to enter my third year in a Bachelor of Engineering & Applied Science (Honors) in Mechanical Engineering. I made the decision to transition from Software Engineering, where I achieved a GPA of 3.80, to Mechanical Engineering to pursue my interest in aerospace and energy systems. <br>
+            <p>Hello! I'm currently in my second year in a Bachelor of Engineering & Applied Science (Honors) in Mechanical Engineering. I made the decision to transition from Software Engineering, where I achieved a GPA of 3.80, to Mechanical Engineering to pursue my interest in aerospace and energy systems. <br>
                 
                 Through a combination of coursework, personal projects, and self-study, I’m building a solid foundation in engineering principles. My experience with 3D modeling tools such as SolidWorks and Blender has allowed me to design and simulate projects in energy and aerospace fields, where I’m particularly eager to make an impact. <br>
                 
