--- a/scissorlift.html
+++ b/scissorlift.html
@@ -70,9 +70,9 @@
         </section>
         <section class="image-section2">
             <h3>Component Model</h3>
-            <img src="lifts.png" alt="Scissor Lift Model">
-            <img src="box1.png" alt="Scissor Lift Model">
-            <img src="box2.png" alt="Scissor Lift Model">
+            <img src="lifts.PNG" alt="Scissor Lift Model">
+            <img src="box1.PNG" alt="Scissor Lift Model">
+            <img src="box2.PNG" alt="Scissor Lift Model">
             <p>SolidWorks 3D Model of the BeyondX5</p>
         </section>
         <section class="video-section">
