--- a/3d_work.html
+++ b/3d_work.html
@@ -209,7 +209,7 @@
 </style>
 </head>
 <body>
-    <img src="meteor.png" alt="Scroll Pet" id="scroll-pet">
+    <img src="spaceship.png" alt="Scroll Pet" id="scroll-pet">
   <nav>
   <div>
     <a href="about.html" class="nav-button">About Me</a>
@@ -222,8 +222,35 @@
 
   <section>
     <h2 class="section-title">3D Work</h2>
-
+    <div class="project">
+      <div class="project-content">
+        <div class="project-text">
+          <h3>Welcome, Occasionally I like to venter into personal 3D builds via mainly Blender as well as Solidworks!<br> Here are some of the stuff that I have made 😊</h3>
+        </div>
+        <div class="project-icon">
+          <img src="girlastronaut.png" alt="Snow Storm Icon" />
+        </div>
+      </div>
+    </div> 
     <!-- Projects -->
+     <div class="project">
+      <div class="project-content">
+        <div class="project-text">
+          <h3>Tree house</h3>
+          <p>This project began with a tutorial, shaped into a little island with a treehouse taking on a more low poly look </p>
+        </div>
+        <div class="project-icon">
+          <img src="tree-house.png" alt="Snow Storm Icon" />
+        </div>
+      </div>
+      <div class="project-images">
+        <img src="project 6-1.JPG" alt="Scene 1" />
+        <img src="project 6-2.JPG" alt="Scene 2" />
+        <img src="project 6-3.JPG" alt="Scene 2" />
+        <img src="project 6-4.JPG" alt="Scene 2" />
+      </div>
+    </div> 
+
     <div class="project">
       <div class="project-content">
         <div class="project-text">
@@ -255,6 +282,7 @@
       <div class="project2-images">
         <img src="project 2-1.png" alt="Kitchen Render" />
         <img src="project 2-2.png" alt="Kitchen Render" />
+        <img src="project 2-3.PNG" alt="Kitchen Render" />
       </div>
     </div>
 
@@ -304,3 +332,4 @@
   });
 </script>
 </html>
+
